cmake_minimum_required(VERSION 3.10)

project(aten_libtorch)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)

option(LINK_SHARED_LIBS "Link to shared PyTorch libraries" ON)
set(PYTORCH_SRC_DIR ../pytorch)
set(PYTORCH_BUILD_DIR ${PYTORCH_SRC_DIR}/build)
set(PYTORCH_LIB_DIR ${CMAKE_SOURCE_DIR}/${PYTORCH_BUILD_DIR}/lib)
set(PYTORCH_DLL_DIR ${CMAKE_SOURCE_DIR}/${PYTORCH_BUILD_DIR}/bin)
if(LINK_SHARED_LIBS) 
  set(LIBTORCH_LIB_DIR ${CMAKE_BINARY_DIR}/lib/shared)
else()
  set(LIBTORCH_LIB_DIR ${CMAKE_BINARY_DIR}/lib/static)
endif()

add_executable(aten_libtorch aten_min.cpp)
target_include_directories(aten_libtorch PUBLIC ${PYTORCH_SRC_DIR})
target_include_directories(aten_libtorch PUBLIC ${PYTORCH_SRC_DIR}/aten/src)

# Copy required files from ${PYTORCH_BUILD_DIR} to ${CMAKE_BINARY_DIR} if not already there
if(NOT EXISTS ${CMAKE_BINARY_DIR}/c10)
  file(COPY ${PYTORCH_BUILD_DIR}/c10 DESTINATION ${CMAKE_BINARY_DIR})
endif()
if(NOT EXISTS ${CMAKE_BINARY_DIR}/aten)
  file(COPY ${PYTORCH_BUILD_DIR}/aten DESTINATION ${CMAKE_BINARY_DIR})
endif()
target_include_directories(aten_libtorch PUBLIC ${CMAKE_BINARY_DIR})
target_include_directories(aten_libtorch PUBLIC ${CMAKE_BINARY_DIR}/aten/src)

if(LINK_SHARED_LIBS) 
  add_library(torch SHARED IMPORTED)
  add_library(c10 SHARED IMPORTED)
else()
  add_library(torch STATIC IMPORTED)
  add_library(c10 STATIC IMPORTED)
endif()

file(MAKE_DIRECTORY ${LIBTORCH_LIB_DIR})
if(MSVC)
  if(NOT EXISTS ${LIBTORCH_LIB_DIR}/torch_cpu.lib)
    file(COPY ${PYTORCH_LIB_DIR}/torch_cpu.lib DESTINATION ${LIBTORCH_LIB_DIR})
  endif()
  if(NOT EXISTS ${LIBTORCH_LIB_DIR}/c10.lib)
    file(COPY ${PYTORCH_LIB_DIR}/c10.lib DESTINATION ${LIBTORCH_LIB_DIR})
  endif()
  set_target_properties(torch PROPERTIES IMPORTED_IMPLIB ${LIBTORCH_LIB_DIR}/torch_cpu.lib)
  set_target_properties(c10 PROPERTIES IMPORTED_IMPLIB ${LIBTORCH_LIB_DIR}/c10.lib)

  if(NOT EXISTS ${CMAKE_BINARY_DIR}/torch_cpu.dll)
    file(COPY ${PYTORCH_DLL_DIR}/torch_cpu.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
  endif()
  if(NOT EXISTS ${CMAKE_BINARY_DIR}/c10.dll)
    file(COPY ${PYTORCH_DLL_DIR}/c10.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
  endif()
#  set_target_properties(torch PROPERTIES IMPORTED_LOCATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/torch_cpu.dll)
#  set_target_properties(c10 PROPERTIES IMPORTED_LOCATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/c10.dll)
else()
  if(LINK_SHARED_LIBS) 
    if(NOT EXISTS ${LIBTORCH_LIB_DIR}/libtorch_cpu.so)
      file(COPY ${PYTORCH_LIB_DIR}/libtorch_cpu.so DESTINATION ${LIBTORCH_LIB_DIR})
    endif()
    if(NOT EXISTS ${LIBTORCH_LIB_DIR}/libc10.so)
      file(COPY ${PYTORCH_LIB_DIR}/libc10.so DESTINATION ${LIBTORCH_LIB_DIR})
    endif()
    set_target_properties(torch PROPERTIES IMPORTED_LOCATION ${LIBTORCH_LIB_DIR}/libtorch_cpu.so)
    set_target_properties(c10 PROPERTIES IMPORTED_LOCATION ${LIBTORCH_LIB_DIR}/libc10.so)
  else()
    if(NOT EXISTS ${LIBTORCH_LIB_DIR}/libtorch_cpu.a)
      file(COPY ${PYTORCH_LIB_DIR}/libtorch_cpu.a DESTINATION ${LIBTORCH_LIB_DIR})
    endif()
    if(NOT EXISTS ${LIBTORCH_LIB_DIR}/libc10.a)
      file(COPY ${PYTORCH_LIB_DIR}/libc10.a DESTINATION ${LIBTORCH_LIB_DIR})
    endif()
    set_target_properties(torch PROPERTIES IMPORTED_LOCATION ${LIBTORCH_LIB_DIR}/libtorch_cpu.a)
    set_target_properties(c10 PROPERTIES IMPORTED_LOCATION ${LIBTORCH_LIB_DIR}/libc10.a)
  endif()
endif()
target_link_libraries(aten_libtorch torch c10)
